--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,22 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        This is an integration of <a href="https://developers.hubspot.com/docs/api/overview">HubSpot Contacts API</a>.
+    </p>
+
+    <div class="card" style="padding:20px; margin-bottom:2em;">
+        <p>Current API key is</p>
+        <form method="POST" class="form">
+            @if (Model.keyChanged)
+            {
+                <p class="text-success">API key changed!</p>
+            }
+            <input class="form-control" type="text" name="apikey" value="@Model.apiKey" />
+            <br>
+            <button class="btn btn-primary">Change Key</button>
+        </form>
+    </div>
+
+    <a class="btn btn-lg btn-success" asp-page="/Hubspot/Index">Get started</a>
 </div>
